# 8750000

./: .gitignore  README.md  app.py  config.yaml  generate_password.py  pyproject.toml  requirements.txt
api/: __init__.py  chrono_api.py
components/: __init__.py  ui.py
pages/: 01_Chrono.py  02_Input_Form.py
styles/: typography.css
